--- a/style.css
+++ b/style.css
@@ -1,25 +1,34 @@
+
+
 .clear {
 	clear: both;
 }
 
+ul {
+	list-style: none;
+	list-style-type: none;
+}
+
+
 
 #mainArea {
 	border-top: #cf8a05 solid 2px;
-	font-size: 20px;
+	
 		
 	
 }
 
 #cv {
-	
-	width: 50vw;
-	margin-right: 50%;
-	margin-left: 50%;
+	margin: auto;
+	width: 50%;	
+}
+
+html {
+
 }
 
 body {
-
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Helvetica', sans-serif;
 	display: inline-block;
 }
 
@@ -49,6 +58,18 @@ body {
 #contactDetails {
 	float: right;
 	color: #444444;
+}
+
+#contactDetails ul a {
+	color: #444444;
+}
+
+#contactDetails ul a:link {
+	text-decoration: none;
+}
+
+#contactDetails ul a:visited {
+	text-decoration: none;
 }
 
 
@@ -81,7 +102,7 @@ section{
 	column-count: 3;
 }
 .subDetails {
-	margin-bottom: -15px;
+	margin-bottom: -5px;
 	font-style: italic;
 	font-size: 15px;
 }
